
* Fixed a hang when restarting FvwmCommand or FvwmConsole.

* A double click no longer works occurs when two different mouse
  buttons are pressed.

* Fixed a relief drawing problem in FvwmWinList.

* Fixed traveling windows on restart if a window used non NorthWest
  gravity and changed that before the restart.

* Fixed installation of FvwmGtk.1 for debian (with DESTDIR set).

-------------------------------------------------------------------

Changes in stable release 2.4.18 (19-Mar-2004)

* Corrected rebooting the machine in FvwmScript-Quit.

* Fixed the FlickeringMoveWorkaround option to the BugOpts command.

* Security patch in fvwmbug.sh.
  See http://securitytracker.com/alerts/2004/Jan/1008781.html

* Security fixes in
    fvwm-menu-directory (BugTraq id 9161)
    fvwm_make_directory_menu.sh
    fvwm_make_browse_menu.sh

* Fixed installation of FvwmGtk.1.

-------------------------------------------------------------------

Changes in stable release 2.4.17 (10-Oct-2003)

* Fixed error message for incorrect --with-SOME-library argument.

* It is now possible to suppress title action or title completely
  in menus created by fvwm-menu-directory.

* Fixed a compile problem on QNX 4.25.

* New configure switch --disable-gtk.

* FvwmGtk.1 is not installed if FvwmGtk is not built.

* The "Visible" condition does no longer select windows on
  different desks.

* With the styles StartsOnPage, SkipMapping and UsePPosition,
  windows that request a specific position are still placed on the
  given page.

* Fixed sending M_NEW_PAGE packets to the modules if the page did
  not change.

* Added support for new BBC headlines in fvwm-menu-headlines, this
  replaces the old BBC-Worlds and BBC-SciTech headlines.

-------------------------------------------------------------------

Changes in stable release 2.4.16 (30-May-2003)

* Fixed a transparency problem in FvwmButtons.

* The PageOnly option in FvwmTaskBar now works after a desk change
  too.
