@@ -35,6 +35,7 @@
 
 typedef struct {
   int  x, y, w, h, tw, th, open, type;
+  int px, py;
   char *text;
   Window win;
 } TipStruct;
