@@ -1,3 +1,9 @@
+2004-07-13  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmTaskBar/Goodies.c (change_goody_colorset):
+	(PopupTipWindow):
+	fixd colour set updating code
+
 2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmGtk/Makefile.am (man_onedir):
