@@ -20,6 +20,9 @@ Changes in stable release 2.4.19 (not released yet)
 
 * Fixed installation of FvwmGtk.1 for debian (with DESTDIR set).
 
+* The clock in FvwmTaskBar is redrawn immediately when its colour
+  changes.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.18 (19-Mar-2004)
